# ml-hub-demo

./: .gitignore  README.md  README.rst  pyproject.toml
cassettes/: test_from_mlhub.yml  test_items.yml  test_list_collections.yml
docs/: conf.py  index.rst
docs/doctrees/: environment.pickle  index.doctree
docs/doctrees/api/: ml_hub_demo.doctree  modules.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/api/: ml_hub_demo.rst.txt  modules.rst.txt
docs/html/api/: ml_hub_demo.html  modules.html
ml_hub_demo/: collection.py  connection.py
tests/: helpers.py  test_ml_hub_demo.py
tests/collections/: test_collections.py
tests/collections/cassettes/: test_list_collections.yml
