[tool.poetry]
name = "ml-hub-demo"
version = "0.1.0"
description = ""
authors = ["Jon Duckworth <bigduck@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sat-stac = "^0.4.0"
requests = "^2.24.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
