[tool.poetry]
name = "ml-hub-demo"
version = "0.0.1"
description = "Example Python SDK for interacting with Radiant Earth's [ML Hub API](http://docs.mlhub.earth/#radiant-mlhub-api)."
authors = ["Jon Duckworth <duckontheweb@gmail.com>"]
maintainers = ["Jon Duckworth <duckontheweb@gmail.com>"]
repository = "https://github.com/duckontheweb/ml-hub-demo"
documentation = "https://duckontheweb.github.io/ml-hub-demo"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.6"
sat-stac = "^0.4.0"
requests = "^2.24.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^3.3.0"
bump2version = "^1.0.1"
tox = "^3.20.1"
flakehell = "^0.7.0"
sphinx-rtd-theme = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[testenv:build-docs]
changedir = {toxinidir}/docs
allowlist_externals = make
deps =
	Sphinx~=3.2.1
	sphinx-rtd-theme~=0.5.0
	recommonmark~=0.6.0
commands =
	make html

"""
